집 가기전 이루어진 kimms의 commit. 브랜드 상품 추가